--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,10 @@
 <%- include('partials/header') %>
-<div class="home-page">
+<div class="container center-align">
     
-    <div class="row welcome-message">
-        <h2>Welcome to Resource Vault</h2>
-        <p>Resource Vault is a collection of links and resources for a dev student.
-        </p>
-        <br>
-        <br>
-        <br>
-        <h6>Click Explore to checkout collection or Log In to view your favourites</h6>
-    </div>
-    
-    
+    <h2>Welcome to Resource Vault</h2>
+    <p>Resource Vault is a collection of links and resources for a dev student.</p>
+    <br>
+    <h6>Click Explore to checkout collection or Log In to view your favourites</h6>
     
     <!-- <div class="row">
         <h3>Explore Top 3 Categories</h3>
@@ -51,7 +44,8 @@
                 </div>
             </div>
         </div>
-      </div>
-</div> -->
+      </div> -->
+
+</div> 
 
 <%- include('partials/footer') %>
