--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,9 @@
 
 </main> 
 
-<footer></footer>
+<footer class="page-footer">
+    <div class="right">All Rights Reserved, &copy; 2022 Resource Vault &nbsp;</div>
+</footer>
+
 </body>
 </html>
