--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,8 +1,7 @@
 <%- include('../partials/header') %>
-
-<h2> User Profile</h2>
-<br>
-
-
+<div class="container">
+    <h2> User Profile</h2>
+    <br>
+</div>
 
 <%- include('../partials/footer') %>
