--- a/views/categories/index.ejs
+++ b/views/categories/index.ejs
@@ -1,45 +1,39 @@
 <%- include('../partials/header') %>
-<h2> Explore Categories</h2>
 
-<!-- A bar here for add new link -->
-<nav class="navbar ">
-    <a></a>
-    <%if(locals.user){%><a class='categoriespage-links' href="/links/new">Add New Resource</a><%}%>
-    <!-- <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> -->
-</nav>
+<div class="row container">
+    <h2> Explore Categories</h2>
+</div>
 
-<!-- side navigation -->
-<div class="categories-page">
-    <div class="categories-area">
-        <div class="nav-area"> 
-            <ul class="nav flex-column nav-tabs">
-                <li>Categories</li><br>
-                <%categories.forEach(function(category){%>
-                    <li class="nav-item">
-                        <a class="nav-link" href='/categories/<%=category.id%>'><%=category.name%>
-                        <% if(user?.isAdmin){ %>
-                            <form style="display: inline;" class="categories-deletebtn" action="/categories/<%=category.id%>?_method=DELETE" method="POST">
-                                <button><i class="bi bi-trash"></i></button>
-                            </form> 
-                            <form style="display: inline;" class="categories-deletebtn" action="/categories/<%=category.id%>/edit" method="GET">
-                                <button><i class="bi bi-pencil"></i></button>
-                            </form> 
-                        <% } %>
-                        </a>
-                    </li>
-                <%})%>
-            </ul>
-        </div>
+<div class="row container">
+
+    <!-- Categories Side Navigation -->
+    <div class="col s3">
+        <ul>
+            <li>Categories</li><br>
+            <%categories.forEach(function(category){%>
+                <li class="nav-item">
+                    <a class="nav-link" href='/categories/<%=category.id%>'><%=category.name%>
+                    <% if(user?.isAdmin){ %>
+                        <form style="display: inline;" class="categories-deletebtn" action="/categories/<%=category.id%>?_method=DELETE" method="POST">
+                            <button><i class="tiny material-icons">delete</i></button>
+                        </form> 
+                        <form style="display: inline;" class="categories-deletebtn" action="/categories/<%=category.id%>/edit" method="GET">
+                            <button><i class="tiny material-icons">edit</i></button>
+                        </form> 
+                    <% } %>
+                    </a>
+                </li>
+            <%})%>
+        </ul>
     </div>
 
-    <div class="links-area">
-        <!-- If link clicked, display this -->
-        <% if (locals.linkToDisplay){%>
-            <h5>Link Information</h5>
-            <div class="link-display">
+
+    <!-- Links View Area -->
+    <div class="col s9">
+
+            <!-- If link clicked, display this -->
+            <% if (locals.linkToDisplay){%>
+                <h5>Link Information</h5>
                 <ul class="link-info">
                     <li><h3 class="link-name"><%=linkToDisplay.name%></h3></li><br>
                     <li>Category:<br>
@@ -64,35 +58,38 @@
                         </form>    
                     <%}%></li>
                 </ul>
-            </div>
+
             <!-- If category clicked, display this -->
-        <% } else if (locals.category){%>
-            <h5><%=category.name%></h5>   
-            <div class="row row-cols-3">
-                <% category.links.forEach(function(link){%> 
-                    <div class="col">
-                        <div class="card h-100">
-                            <div class="card-body">
-                                <% if(user){%>
-                                    <form class="add-to-favourite" action="/users/<%=user.id%>/favourites/new" method="POST">
-                                        <input hidden name="linkID" value="<%=link.id%>" />
-                                        <button class="card-link"><i class="bi bi-suit-heart"></i></button>
-                                    </form>       
-                                <%}%>
-                                <h5 class="card-header card-title"><%=link.name%></h5>
-                                <!-- <h6 class="card-subtitle mb-2 text-muted"><%=link.category%></h6> -->
-                                <br>
-                                <p class="card-text"><%=link.description%></p>
-                                <a href="<%=link.link%>" class="card-link" target="_blank">direct link</a><br>
-                                <a href="/links/<%=link.id%>" class="card-link">more information</a>
+            <% } else if (locals.category){%>
+                <h5><%=category.name%></h5>   
+                <div class="row">
+                    <% category.links.forEach(function(link){%> 
+                        <div class="col s12 m6">
+                            <div class="card">
+                                <div class="card-content">
+                                    <span class="card-title"><%=link.name%></span>
+                                    <!-- <h6 class="card-subtitle mb-2 text-muted"><%=link.category%></h6> -->
+                                    <p><%=link.description%></p>
+                                </div>
+                                <div class="card-action">
+                                    <a href="<%=link.link%>" class="card-link" target="_blank">direct link</a><br>
+                                    <a href="/links/<%=link.id%>" class="card-link">more information</a>
+                                    <% if(user){%>
+                                        <form class="add-to-favourite" action="/users/<%=user.id%>/favourites/new" method="POST">
+                                            <input hidden name="linkID" value="<%=link.id%>" />
+                                            <button type="submit"><i class="material-icons">favorite-border</i></button>
+                                        </form>       
+                                    <%}%>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                <%})%>
-            </div>
-        <%} else {%>
-                <h5>Pick A Category</h5>    
-        <%} %> 
+                    <%})%>
+                </div>
+            <%} else {%>
+                    <h5>Pick A Category</h5>    
+            <%} %> 
     </div>
-</div> 
+
+
+</div>
 <%- include('../partials/footer') %>
