--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,33 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resource Vault</title>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
-    <header>
-        <h1>RESOURCE <br> VAULT</h1>
-        <nav class="navbar-transition cool-navbar z-depth-0">
-            <a href="/"> home </a>
-            <a href="/categories"> explore</a>
-            
-            <!-- <a href="/links/new">Add New Resource</a> -->
-            <!-- Login UI -->
-            <% if (locals.user) { %>
-                <% if(user.isAdmin == true){%>
-                    <a href="/categories/new">add new category</a>
-                <%}%>
-                <a href="/users/<%=user.id%>/favourites">favourites</a>
-                <a href="/users/index">profile</a>
-                <a href="/logout">log out</a>
-            <% } else { %>
-                <a href="/auth/google">login In</a>
-            <% } %>
-
-        </nav>
-    </header>       
+        <header class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper">
+                    <ul class="left-align left">
+                        <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Resource Vault</a></li>
+                    </ul>
+                    <ul class="right-align right">
+                        <li><a href="/"> home </a></li>
+                        <li><a href="/categories"> explore</a></li>
+                        
+                        <!-- <a href="/links/new">Add New Resource</a> -->
+                        <!-- Login UI -->
+                        <% if (locals.user) { %>
+                            <% if(user.isAdmin == true){%>
+                                <li><a href="/categories/new">add new category</a></li>
+                            <%}%>
+                            <li><a class='categoriespage-links' href="/links/new">add new resource</a></li>
+                            <li><a href="/users/<%=user.id%>/favourites">favourites</a></li>
+                            <li><a href="/users/index">profile</a></li>
+                            <li><a href="/logout">log out</a></li>
+                        <% } else { %>
+                            <li><a href="/auth/google">login In</a></li>
+                        <% } %>
+                    </ul>
+                </div>
+            </nav>
+        </header>
     <main>
 
     
