--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,12 +1,14 @@
 <%- include('../partials/header') %>
-<h2> User Profile</h2>
-
-<ul>
-    <li>Name: <%= user.name%></li>
-    <li>Email: <%= user.email%></li>
-</ul>
-
-<h4>Your Favourites</h4>
+<div class="container center-align">
+    <h2> User Profile</h2>
+    
+    <ul>
+        <li>Name: <%= user.name%></li>
+        <li>Email: <%= user.email%></li>
+    </ul>
+    
+    <h4>Your Favourites</h4>
+</div>
 
 
 
