--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 
 </main> 
 
-<footer class="page-footer">
+<footer>
     <div class="right">All Rights Reserved, &copy; 2022 Resource Vault &nbsp;</div>
 </footer>
 
