--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,8 @@
   --darker-orange: #fb7c37;
   --lighter-teal: #c3e1e5b7;
   --teal: #2A8A92;
+  --text-shadow: 2px 4px 3px rgba(0, 0, 0, .2);
+  --box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .3);
 }
 
 *,
@@ -18,7 +20,6 @@ html {
 }
 
 /* FONT SIZING */
-/* Headings */
 h1 {
   font-size: 2.5rem;
   margin: 0;
@@ -54,7 +55,6 @@ p {
 }
 
 /* BODY STYLING */
-
 body {
   margin: 0;
   height: 100%;
@@ -65,12 +65,15 @@ body {
 }
 
 /* NAVIGATION STYLING */
-
 nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: var(--teal);
   color: var(--offwhite);
+  padding: 1% 5%;
+  height: 10vh;
+  box-shadow: var(--box-shadow);
 }
 
 nav ul {
@@ -87,7 +90,7 @@ nav li {
 
 nav a {
   text-decoration: none;
-  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
+  text-shadow: var(--text-shadow);
   color: var(--offwhite);
 }
 
@@ -97,23 +100,59 @@ nav a:hover {
 
 .brand-logo {
   font-size: 2rem;
-  color: var(--orange);
-  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
+  color: var(--offwhite);
+  text-shadow: var(--text-shadow);
 }
 
 .brand-logo:hover {
-  color: var(--offwhite);
+  color: var(--orange);
+}
+
+.nav-menu {
+  display: flex;
+  flex-direction: column;
 }
 
 .hamburger {
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
 }
 
 .hamburger-icon {
   width: 30px;
   height: 2px;
-  background-color: #fff;
-  margin-bottom: 6px;
+  background-color: var(--offwhite);
+}
+
+.nav-items {
+  display: none;
+  /* Hide the navigation items by default */
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  margin-top: 10px;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 100%;
+  background-color: var(--teal);
+  color: var(--darker-orange);
+  padding: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
+}
+
+.nav-items.active {
+  display: flex;
+  /* Show the navigation items when active */
+  position: absolute;
+  top: 10vh;
+  right: 0;
+  margin-top: 0;
+  width: 50vw;
 }
 
 /* Media query for larger screens */
@@ -131,6 +170,7 @@ nav a:hover {
 
   .nav-items {
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
     gap: 20px;
     align-items: center;
@@ -138,36 +178,6 @@ nav a:hover {
 
   .hamburger {
     display: none;
-  }
-}
-
-/* Media query for smaller screens */
-@media (max-width: 767px) {
-  nav {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    background-color: var(--teal);
-    color: var(--offwhite);
-    padding: 10px;
-  }
-
-  .nav-items {
-    display: none;
-    /* Hide the navigation items by default */
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 10px;
-  }
-
-  .nav-items.active {
-    display: flex;
-    /* Show the navigation items when active */
-  }
-
-  .hamburger {
-    display: block;
-    /* Show the hamburger menu on smaller screens */
   }
 }
 
@@ -181,8 +191,8 @@ footer {
   background-color: var(--teal);
   color: var(--offwhite);
   text-align: center;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
-  font-size: .75rem;
+  box-shadow: var(--box-shadow);
+  font-size: .8rem;
   padding: 0 2%;
 }
 
