--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,10 @@
 <%- include('partials/header') %>
-
-<main>
-    
-    <div class="main-title">
-        <h1 >Welcome to Resource Vault</h1>
+    <div class="home-title">
+        <h1 >Welcome to <span>Resource Vault</span></h1>
         <h6>Resource Vault is a collection of links and resources for a software engineering student.</h6>
     </div>
-    <div class="main-content">
-        <p>Click Explore to checkout collection or Log In to view your favourites</p>
+    <div class="home-content">
+        <p>Click <strong>Explore</strong> to checkout collection or <strong>Log In</strong> to view your favourites.</p>
         
         <!-- <div class="row">
             <h3>Explore Top 3 Categories</h3>
@@ -50,6 +47,4 @@
         </div> -->
         
     </div>
-    </main> 
-
 <%- include('partials/footer') %>
