--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
                       <li><a href="/users/index"> Your Profile</a></li>
                       <li><a href="/logout">Log Out</a></li>
                     <% } else { %>
-                      <li><a href="/auth/google">Login In</a></li>
+                      <li><a href="/auth/google">Log In</a></li>
                     <% } %>
                   </ul>
                 </div>
